build error 해결 및 상한가 종목 받아오기 성공.